--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,9 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "About"
+    - text: "Chatbot"
+      href: robot/index.html
+    - text: "CV"
       href: about.html
+
 output: distill::distill_article
